bff/mobile-bff/k8s/cloud/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobile-bff
  labels:
    app: mobile-bff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mobile-bff
  template:
    metadata:
      labels:
        app: mobile-bff
    spec:
      containers:
      - name: mobile-bff
        image: us-central1-docker.pkg.dev/proyecto-final-2-455301/apis-images/mobile-bff:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 30
