bff/mobile-bff/k8s/cloud/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: mobile-bff-service
spec:
  selector:
    app: mobile-bff
  ports:
    - port: 80
      targetPort: 5000
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobile-bff-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "mobile-bff-static-ip"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mobile-bff-service
            port:
              number: 80
#
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: mobile-bff-service
#spec:
#  selector:
#    app: mobile-bff
#  ports:
#  - port: 80
#    targetPort: 5000
#  type: NodePort
#
#---
#
#apiVersion: networking.rabbitmq.io/v1
#kind: Ingress
#metadata:
#  name: mobile-bff-ingress
#  annotations:
#    kubernetes.io/ingress.class: "gce"
#spec:
#  rules:
#  - http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: mobile-bff-service
#            port:
#              number: 80
